<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".SignUp_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/appColor"
        android:id="@+id/toolbar" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:src="@drawable/arrow_left"
            android:background="@null"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/back"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="10dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="10dp" >

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/input_name_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    app:met_floatingLabelAlwaysShown="false"
                    app:met_textColorHint="@color/colorPrimary"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:inputType="textWebEmailAddress"
                    android:layout_weight="1"
                    app:met_floatingLabelAnimating="true"
                    app:met_floatingLabel="highlight"
                    android:maxLength="25"
                    android:imeOptions="actionNext"
                    android:digits="._abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@ "
                    android:hint="@string/first_name" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/input_name_last"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    app:met_floatingLabelAlwaysShown="false"
                    app:met_textColorHint="@color/colorPrimary"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    app:met_floatingLabelAnimating="true"
                    app:met_floatingLabel="highlight"
                    android:inputType="textWebEmailAddress"
                    android:layout_weight="1"
                    android:maxLength="25"
                    android:imeOptions="actionNext"
                    android:digits="._abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@ "
                    android:hint="@string/last_name" />
            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="false"
                android:inputType="textEmailAddress"
                android:maxLength="15"
                android:digits="._abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@ "
                android:paddingRight="10dp"
                android:hint="@string/display_name"
                app:met_textColorHint="@color/colorPrimary" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="false"
                android:inputType="textEmailAddress"
                android:maxLength="25"
                android:digits="._abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@ "
                android:paddingRight="10dp"
                android:hint="@string/email"
                app:met_textColorHint="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/input_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/cc"
                    android:text="@string/default_cc"
                    app:met_textColorHint="@color/colorPrimary"
                    android:focusable="false"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    app:met_floatingLabelAlwaysShown="false"
                    app:met_iconPadding="0dp"
                    app:met_floatingLabelAnimating="true"
                    app:met_floatingLabel="highlight" />

                <com.tommy.driver.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:keyboardAutoPopOnSearch="false"
                    android:visibility="invisible" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/input_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    android:digits="0123456789"
                    app:met_textColorHint="@color/colorPrimary"
                    android:maxLength="15"
                    android:imeOptions="actionNext"
                    app:met_floatingLabelAnimating="true"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelAlwaysShown="false"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:paddingRight="10dp" />

            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890`~!@#$%^*()-_+=|{}[]:;&apos;&lt;&gt;&amp;/"
                app:met_textColorHint="@color/colorPrimary"
                app:met_floatingLabelAlwaysShown="false"
                android:paddingRight="10dp"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabel="highlight"
                android:inputType="textPassword"
                android:hint="@string/password" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_conform_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890`~!@#$%^*()-_+=|{}[]:;&apos;&lt;&gt;&amp;/"
                app:met_textColorHint="@color/colorPrimary"
                app:met_floatingLabelAlwaysShown="false"
                android:paddingRight="10dp"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabel="highlight"
                android:inputType="textPassword"
                android:hint="@string/confirm_password" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                app:met_floatingLabelAlwaysShown="false"
                app:met_textColorHint="@color/colorPrimary"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:inputType="textWebEmailAddress"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabel="highlight"
                android:maxLength="20"
                android:digits="._abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@ "
                android:hint="@string/city" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/numberofpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                app:met_floatingLabelAlwaysShown="false"
                app:met_textColorHint="@color/colorPrimary"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:inputType="number"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabel="highlight"
                android:maxLength="2"
                android:visibility="gone"
                android:digits="._abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@ "
                android:hint="@string/select_the_number_of_passengers" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/appColor"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="15sp"
                android:id="@+id/continueReg"
                android:gravity="center"
                android:text="@string/continue_button" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/ic_split"
                android:layout_above="@+id/signIn"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/or"
                    android:id="@+id/or_text"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="13dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/or_text"
                    android:layout_toStartOf="@+id/or_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="13dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@+id/or_text"
                    android:layout_toEndOf="@+id/or_text" />

            </RelativeLayout>

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_alignParentBottom="true"
                android:text="@string/sign_in"
                android:id="@+id/signIn"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/appColor"
                android:background="@drawable/border"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>