<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/header_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/back"
        android:background="@color/colorPrimary"
        android:gravity="left|center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="Sign In"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite" />


    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scrollView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/appColor"
        android:padding="5dp"
        app:srcCompat="@drawable/arrow_left" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:digits="._abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@ "
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="254"
                android:paddingRight="10dp"
                android:singleLine="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="false"
                app:met_floatingLabelAnimating="true"
                app:met_textColorHint="@color/colorPrimary" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890`~!@#$%^*()-_+=|{}[]:;&apos;&lt;&gt;&amp;/"
                android:paddingRight="10dp"
                android:singleLine="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="false"
                app:met_floatingLabelAnimating="true"
                app:met_textColorHint="@color/colorPrimary" />

            <Button
                android:id="@+id/btnSignin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@+id/edtForgotEmail"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="25dp"
                android:background="@color/appColor"
                android:paddingLeft="5dp"
                android:text="@string/sign_in"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnForgotPassword"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_below="@+id/btnSignin"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Forgot Password"
                android:textColor="@color/appColor" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>